# Motion_Media

./: .gitignore  README.md  main.py  main.spec  pyproject.toml  test.py
docs/: usage.md
src/: __init__.py  config.py  main.py
src/controllers/: __init__.py  face_controller.py  gesture_controller.py  voice_controller.py
src/utils/: __init__.py  audio.py
tests/: __init__.py  test_audio_controller.py
